# strns2cards

./: .gitignore  .gitmodules  0_version.py  1_cluster.py  2_texture.py  3_fitting.py  4_export_obj2fbx.py  README.md  requirements-detail.txt  requirements.txt  texture_utils.py
pystrns2cards/: CMakeLists.txt  __init__.py  antialias.py  bitset_utils.py  camera.py  cluster.py  curve_utils.py  dda.py  optimizer.py  rasterize.py
pystrns2cards/src/: antialias.cu  bitset_utils.cu  compact_utils.cu  cuda_common.cuh  curve_utils.cu  dda.cu  hair_loader.cpp  hair_loader.h  mesh_utils.cpp  mesh_utils.h  pystrns2cards.cpp  rasterize.cu
